# pgfplots

./: Cargo.toml
src/: engine.rs  error.rs  lib.rs  output.rs
src/document/: mod.rs
src/document/preamble/: compat.rs  mod.rs  package.rs  pgfplotslib.rs
src/document/tikzpicture/: mod.rs
src/document/tikzpicture/axis/: mod.rs  test.rs
src/document/tikzpicture/axis/plot/: mod.rs  test.rs
src/document/tikzpicture/axis/plot/bidimensional/: mod.rs
src/document/tikzpicture/axis/plot/bidimensional/coordinate/: mod.rs
src/libs/: mod.rs
src/libs/statistics/: histogram.rs  mod.rs
