[package]
name = "pgfplots"
version = "0.5.1" # Remember to also change this in the README.md
edition = "2021"
license = "MIT"
description = "A Rust library to generate publication-quality figures"
readme = "README.md"
repository = "https://github.com/DJDuque/pgfplots"
keywords = ["pgfplots", "plotting", "plot", "visualization", "latex"]
categories = ["visualization"]
documentation = "https://docs.rs/pgfplots"
exclude = ["examples/*.png"]

[dependencies]
dyn-clone = "1.0.11"
itertools = "0.10.5"
opener = "0.6.1"
rand = "0.8.5"
tectonic = { version = "0.12.0", optional = true }
tempfile = "3.5.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
